fixed an extra space before 'table of contents'; fixed color of blockquote in dark theme

--- a/_sass/my-theme.scss
+++ b/_sass/my-theme.scss
@@ -182,6 +182,7 @@ blockquote {
 	}
 
 	blockquote {
+		border-left: 4px solid $grey-color-dark;
 		color: $grey-color;
 	}
 
